# qwen-test

./: QWEN.md  README.md  main.py  pyproject.toml  requirements.txt  savegame.json  settings.json  test_format.py
modules/: achievements.py  core.py  multiplayer.py  save.py  shop.py  ui.py
src/: main.py
